--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,6 @@
     <title>Your first Angular app</title>
   </head>
   <body>
-    <add-one-button>Loading...</add-one-button>
+    <tree>Loading...</tree>
   </body>
 </html>
